[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pdb-cli"
version = "0.1.0"
description = "Command-line client for the RCSB PDB programmatic APIs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "0BSD" }
dependencies = [
  "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://github.com/decent-tools-for-thought/pdb-rcsb-cli"
Repository = "https://github.com/decent-tools-for-thought/pdb-rcsb-cli"
Issues = "https://github.com/decent-tools-for-thought/pdb-rcsb-cli/issues"
Documentation = "https://www.rcsb.org/docs/programmatic-access/web-apis-overview"

[dependency-groups]
dev = [
  "build>=1.2.2",
  "mypy>=1.18.2",
  "pytest>=8.4.2",
  "ruff>=0.13.1",
]

[project.scripts]
pdb-cli = "pdb_cli.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["src/pdb_cli", "tests"]
strict = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["httpx", "httpx.*"]
ignore_missing_imports = true
